# Argon-Plasma

./: README.md
gasPDEs/: CMakeLists.txt  README.md  run.sh
gasPDEs/include/: Inputs.h  Model.h  Processor.h  Reaction.h  Solver.h
gasPDEs/src/: Inputs.cpp  Model.cpp  Processor.cpp  Reaction.cpp  Solver.cpp  main.cpp
